@@ -85,19 +85,33 @@ def log_exc(logger):
    logger.info("Exception occured: %s" % t )
    logger.info("Exception value: %s" % v)
    logger.info("Exception Info:\n%s" % string.join(traceback.format_list(traceback.extract_tb(tb))))
+   
 
-def print_exc(exc,full=False):
+def get_exc(exc,full=True):
    (t, v, tb) = sys.exc_info()
+   buf = ""
    try:
       getattr(exc, "from_cobbler")
-      print >> sys.stderr, str(exc)[1:-1]
+      buf = str(exc)[1:-1] + "\n"
    except:
-      print >> sys.stderr, t
-      print >> sys.stderr, v
+      buf = buf + "%s" % exc.message
+      buf = sys.stderr, t
+      buf = "%s\n%s" % (buf,v)
       if full:
-          print >> sys.stderr, string.join(traceback.format_list(traceback.extract_tb(tb)))
-   return 1
+          buf = buf + "\n" + "\n".join(traceback.format_list(traceback.extract_tb(tb)))
+   return buf
 
+def print_exc(exc,full=False):
+   buf = get_exc(exc)
+   sys.stderr.write(buf+"\n")
+   return buf
+
+def cheetah_exc(exc,full=False):
+   lines = get_exc(exc).split("\n")
+   buf = ""
+   for l in lines:
+      buf = buf + "# %s\n" % l
+   return buf
 
 def trace_me():
    x = traceback.extract_stack()
